[package]
name = "arbuscular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
isahc = "1.6.0"
serde = "1.0.136"
serde_json = "1.0.79"
serde_with = { version = "1.12.0", features = ["json"] }

[dev-dependencies]
httpmock = "0.6.6"
